tests/scheduling/fail/basic-2.stderr
error: scheduling error: expression depends on itself
 --> tests/scheduling/fail/basic-2.rs:8:19
  |
8 |         a : int = b,
  |                   ^
